# MlChess

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build-all.ps1  run-all.ps1
.agents/skills/debug-mlchess-bug/: SKILL.md
.agents/skills/debug-mlchess-bug/agents/: openai.yaml
.agents/skills/debug-mlchess-bug/references/: bug-report-template.md  codex-rules.md  system-map.md
.github/: copilot-instructions.md  pull_request_template.md
.github/prompts/: refactor.prompt.md
crates/arena-core/: Cargo.toml
crates/arena-core/src/: domain.rs  lib.rs  opening.rs  pairing.rs  rating.rs
crates/arena-core/src/domain/: agents.rs  competition.rs  games.rs  live.rs  mod.rs  openings.rs  ratings.rs
crates/arena-core/src/testing/: mod.rs  models.rs  rating.rs  scheduler.rs
crates/arena-runner/: Cargo.toml
crates/arena-runner/src/: adapter.rs  game_logic.rs  lib.rs  match_runner.rs  uci.rs
crates/arena-server/: AGENTS.md  Cargo.toml
crates/arena-server/src/: api.rs  db.rs  gameplay.rs  lib.rs  live.rs  main.rs  orchestration.rs  presentation.rs  rating.rs  registry.rs  registry_loader.rs  registry_simple_toml.rs  registry_sync.rs  state.rs  storage.rs
crates/arena-server/src/api/: agents.rs  debug.rs  event_presets.rs  games.rs  health.rs  human_games.rs  leaderboards.rs  live_duel.rs  live_ws.rs  matches.rs  mod.rs  pools.rs  routes.rs  tournaments.rs
crates/arena-server/src/bootstrap/: middleware.rs  mod.rs  reconciliation.rs  restore.rs  server.rs
crates/arena-server/src/debug/: mod.rs  query_service.rs
crates/arena-server/src/human_games/: service.rs
crates/arena-server/src/live/: mod.rs  stream_bootstrap.rs
crates/arena-server/src/match_runtime/: engine_turn.rs  finalize.rs  human_turn.rs  logs.rs  mod.rs  owner.rs  publish.rs  types.rs
crates/arena-server/src/state/: app_state.rs  coordinator.rs  human_game_store.rs  mod.rs  request_context.rs  telemetry.rs
crates/arena-server/src/storage/: agents.rs  event_presets.rs  games.rs  live.rs  matches.rs  mod.rs  openings.rs  pools.rs  ratings.rs  request_journal.rs  tournaments.rs
crates/arena-server/src/tournaments/: service.rs
crates/chess_core/: Cargo.toml
crates/chess_core/examples/: movegen_bench.rs  perft_bench.rs
crates/chess_core/src/: attacks.rs  attacks_tests.rs  bitboard.rs  bitboard_tests.rs  board.rs  eval.rs  lib.rs  movegen.rs  movegen_tests.rs  perft.rs  search.rs  time_control.rs  time_control_tests.rs  types.rs  uci.rs  zobrist.rs  zobrist_tests.rs
crates/chess_core/tests/: draw_tests.rs  perft_tests.rs
crates/classical_engine/: Cargo.toml
crates/classical_engine/src/: eval.rs  lib.rs  search.rs  search_tests.rs
crates/engine-sdk/: Cargo.toml
crates/engine-sdk/src/: lib.rs
crates/engines/classical/: Cargo.toml
crates/engines/classical/src/: lib.rs  search.rs
crates/engines/neural/: Cargo.toml
crates/engines/neural/src/: features.rs  lib.rs  lib_tests.rs  onnx_engine.rs
crates/engines/random/: Cargo.toml
crates/engines/random/src/: lib.rs  lib_tests.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  board.rs  game.rs  main.rs  styles.rs  tournament_view.rs
crates/ml_engine/: Cargo.toml
crates/ml_engine/src/: features.rs  features_tests.rs  lib.rs
crates/tournament/: Cargo.toml
crates/tournament/src/: elo.rs  elo_tests.rs  lib.rs  main.rs  match_runner.rs  match_runner_tests.rs  results.rs
crates/uci_engine/: Cargo.toml
crates/uci_engine/src/: main.rs
data/openings/: starter.fens
debug-reports/: mlchess-bug-report-2026-04-12T18-06-38.219Z-1a738c18-5e65-4596-b843-62e16fe255b7.json
docs/: profiling.md
docs/architecture/: match-runtime-ownership.md  module-boundaries.md
docs/debugging/: bug-report-template.md  codex-rules.md  system-map.md
docs/debugging/bugs/: README.md
engines/auto-tuned-classical/: Cargo.toml  ENGINE.md  weights.json
engines/auto-tuned-classical/src/: main.rs
engines/handcrafted-alpha-beta/: Cargo.toml  ENGINE.md
engines/handcrafted-alpha-beta/src/: main.rs
engines/king-safety-dev/: Cargo.toml
engines/king-safety-dev/src/: main.rs
engines/king-safety-engine/: Cargo.toml
engines/king-safety-v1/: Cargo.toml
engines/material-plus-dev/: Cargo.toml
engines/material-plus-engine/: Cargo.toml
engines/material-plus-engine/src/: main.rs
engines/material-plus-v1/: Cargo.toml
engines/minimax-dev/: Cargo.toml
engines/minimax-engine/: Cargo.toml
engines/minimax-v1/: Cargo.toml
engines/minimax-v1/src/: main.rs
frontend/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/app/: api.ts  components.tsx  debug-report.ts  debug.ts  live.test.ts  live.ts  livePlayback.test.ts  livePlayback.ts  pieces.ts  types.ts  utils.test.ts  utils.ts
frontend/src/app/layout/: AppLayout.tsx
frontend/src/app/providers/: FlashProvider.tsx  QueryProvider.tsx
frontend/src/app/routes/: config.ts  index.tsx
frontend/src/features/debug/: DebugDrawer.tsx  useDebugBootstrap.ts
models/: README.md
models/v001/: .gitkeep  metadata.toml
plans/: live_game_rebuild_plan.md
scripts/: check-boundaries.ps1  move_inline_tests.py  profile.ps1
scripts/debug/: cleanup-stale-match-statuses.ps1  dev.ps1  dump-match.ps1  export-match-bundle.ps1  repro-human-timeout.ps1  repro-live-gap.ps1  reset-db.ps1
setup/events/: starter-ladder.toml  starter-round-robin.toml
setup/openings/: starter-benchmark-suite.toml
setup/pools/: chess960-blitz-2-0.toml  chess960-blitz-3-0.toml  chess960-blitz-3-2.toml  chess960-blitz-5-0.toml  chess960-blitz-5-5.toml  chess960-bullet-1-0.toml  chess960-bullet-2-1.toml  chess960-hyperbullet-30-0.toml  standard-blitz-2-0.toml  standard-blitz-3-0.toml  standard-blitz-3-2.toml  standard-blitz-5-0.toml  standard-blitz-5-5.toml  standard-bullet-1-0.toml  standard-bullet-2-1.toml  standard-hyperbullet-30-0.toml  starter-chess960-pool.toml  starter-standard-pool.toml
training/: README.md  dataset.py  export_onnx.py  model.py  requirements.txt  train.py
training/data/: .gitkeep
(+42 files in other folders)
