[workspace]
members = [
  "crates/chess_core",
  "crates/classical_engine",
  "crates/ml_engine",
  "crates/tournament",
  "crates/uci_engine",
]
resolver = "2"

# Workspace-wide dependencies for consistent versions
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
