[workspace]
members = [
    "crates/arena-core",
    "crates/arena-runner",
    "crates/arena-server",
    "crates/engine-sdk",
    "engines/*",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
cozy-chess = "0.3"
futures = "0.3"
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
