[package]
name = "arena-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arena-core = { path = "../arena-core" }
async-trait.workspace = true
chrono.workspace = true
cozy-chess.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

