[package]
name = "tournament"
version = "0.1.0"
edition = "2021"
description = "Tournament runner for comparing chess engines with Elo tracking"
authors = ["ML-chess"]

[dependencies]
chess_core = { path = "../chess_core" }
classical_engine = { path = "../classical_engine" }
ml_engine = { path = "../ml_engine" }

# For serialization of results
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# For randomization in openings
rand = "0.8"

[[bin]]
name = "tournament"
path = "src/main.rs"
