[package]
name = "king-safety-dev"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.arena]
launcher = "cargo_package"
agent_key = "king-safety"
version_key = "dev"
agent_name = "King Safety"
version_label = "dev"
declared_name = "King Safety"
tags = ["starter", "positional", "king-safety", "dev"]
notes = "Mutable development version of King Safety."
supports_chess960 = true

[dependencies]
anyhow.workspace = true
cozy-chess.workspace = true
engine-sdk = { path = "../../crates/engine-sdk" }
rand.workspace = true
