[package]
name = "material-plus-dev"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.arena]
launcher = "cargo_package"
agent_key = "material-plus"
version_key = "dev"
agent_name = "Material Plus"
version_label = "dev"
declared_name = "Material Plus"
tags = ["starter", "baseline", "material", "dev"]
notes = "Mutable development version of Material Plus."
supports_chess960 = true

[dependencies]
anyhow.workspace = true
cozy-chess.workspace = true
engine-sdk = { path = "../../crates/engine-sdk" }
rand.workspace = true
