[package]
name = "minimax-dev"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.arena]
launcher = "cargo_package"
agent_key = "minimax"
version_key = "dev"
agent_name = "MiniMax"
version_label = "dev"
declared_name = "MiniMax"
tags = ["starter", "search", "alpha-beta", "dev"]
notes = "Mutable development version of MiniMax."
supports_chess960 = true

[dependencies]
anyhow.workspace = true
cozy-chess.workspace = true
engine-sdk = { path = "../../crates/engine-sdk" }
rand.workspace = true
