[package]
name = "minimax-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.arena]
launcher = "cargo_package"
agent_key = "minimax"
version_key = "v1"
agent_name = "MiniMax"
version_label = "v1"
declared_name = "MiniMax"
tags = ["starter", "search", "alpha-beta"]
notes = "Fixed-depth negamax with alpha-beta pruning and a simple capture extension."
supports_chess960 = true

[dependencies]
anyhow.workspace = true
cozy-chess.workspace = true
engine-sdk = { path = "../../crates/engine-sdk" }
rand.workspace = true
